--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ru" dir="ltr">
   <head>
 <meta name="viewport" content="width=device-width">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
