--- a/calendar.html
+++ b/calendar.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>calendar</title>
+    <title>Билеты</title>
     <meta name="viewport" content="width=device-width">
 
     <style>
@@ -344,7 +344,7 @@
         font-size: 15px;
         text-align: center;
         border-spacing:0px;
-        top: -300px; left: 80px;
+        top: -320px; left: 80px;
       }
       #calendar tr.dn td {
         position: relative;
@@ -483,7 +483,7 @@
 
       form{
         position: relative;
-        padding-top: 140px;
+        padding-top: 50px;
 
       }
 
