--- a/main.html
+++ b/main.html
@@ -122,6 +122,14 @@
  @media only screen and (min-width: 321px){
   .menu__item, .menu__box, .menu__btn, .checkbox .menu__toggle, .hamburger-menu{ visibility: hidden;}
 }
+
+/* @media only screen and (max-width: 768px){
+.compas{
+  position: absolute;
+  top: 420px !important;
+  left: 140px !important;
+}
+} */
   h1{
     position: absolute;
     /* width: 1305px;
