--- a/scene.html
+++ b/scene.html
@@ -1,9 +1,311 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Scene</title>
+    <meta name="viewport" content="width=device-width">
+
+    <title>Сцена</title>
     <style media="screen">
+
+
+
+
+    @media only screen and (max-width: 320px) {
+
+      .mainlink, .aboutlink, .storelink, .calendarlink, .placeslink{ display: none;
+      }
+      .logo{
+        position: fixed;
+        left: 690px !important;
+        top: 60px !important;
+        height: 81px !important;
+        width: 220px !important;
+        z-index: 1 !important;
+      }
+      #menu__toggle {
+        opacity: 0;
+      }
+
+      .menu__btn {
+        display: flex;
+        align-items: center;
+        position: fixed;
+        top: 80px;
+        left: 80px;
+        width: 120px;
+        height: 100px;
+        cursor: pointer;
+        z-index: 100;
+
+      }
+
+      .menu__btn > span,
+      .menu__btn > span::before,
+      .menu__btn > span::after {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 10px;
+        background-color: #FF003D;
+
+      }
+      .menu__btn > span::before {
+        content: '';
+        top: -40px;
+
+      }
+      .menu__btn > span::after {
+        content: '';
+        top: 40px;
+
+      }
+
+      .menu__box {
+        display: block;
+        position: fixed;
+        visibility: hidden;
+        top: 0;
+        left: -100%;
+        width: 1220px ;
+        height: 100% ;
+        margin: 0;
+        padding: 80px 0 ;
+        list-style: none ;
+        text-align: center ;
+        background-color: black;
+        box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+        z-index: 10;
+      }
+      /* элементы меню */
+      .menu__item {
+        display: block;
+        padding: 42px 94px;
+        color: #FF003D;
+        font-family: Lovelace;
+        font-size: 80px;
+        font-weight: 600;
+        text-decoration: none;
+        background-color: black;
+        top: 30px;
+      }
+
+      #menu__toggle:checked ~ .menu__btn > span {
+        transform: rotate(45deg);
+      }
+      #menu__toggle:checked ~ .menu__btn > span::before {
+        top: 0;
+        transform: rotate(0);
+      }
+      #menu__toggle:checked ~ .menu__btn > span::after {
+        top: 0;
+        transform: rotate(90deg);
+      }
+      #menu__toggle:checked ~ .menu__box {
+        visibility: visible;
+        left: 0;
+      }
+       #futer{
+      width: 1000px !important;
+      /* left: 100px !important; */
+      top: 2600px !important;
+      background: black;
+      height: 2px !important;
+    }
+    #boom{
+      top: 2800px !important;
+    }
+  p8{
+  position: absolute;
+  width: 199px;
+  height: 30px;
+  left: 80px;
+  top: 2660px !important;
+
+  font-family: Lovelace;
+  font-style: light;
+  font-weight: light;
+  font-size: 35px !important;
+  line-height: 56px;
+
+  color: black;}
+
+  p11{
+  position: absolute;
+  width: 199px;
+  height: 30px;
+  left: 530px !important;
+  top: 2660px !important;
+  font-family: Lovelace;
+  font-style: light;
+  font-weight: light;
+  font-size: 35px !important;
+  line-height: 56px;
+
+  color: black;}
+
+  p9{
+  position: absolute;
+  width: 285px;
+  height: 48px;
+  left: 290px;
+  top: 2670px !important;
+  font-family: FuturaLightC;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 25px !important;
+  line-height: 38px;
+
+  color: black;
+  }
+
+  p10{
+  position: absolute;
+  width: 285px;
+  height: 48px;
+  left: 290px;
+  top: 2700px !important;
+
+  font-family: FuturaLightC;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 25px !important;
+  line-height: 38px;
+
+  color: black;
+  }
+
+  p12{
+  position: absolute;
+  width: 285px;
+  height: 48px;
+  left: 710px !important;
+  top: 2660px !important;
+
+  font-family: FuturaLightC;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 25px !important;
+  line-height: 38px;
+
+  color: black;
+  }
+  .scene{
+  position: absolute;
+  width: 800px !important;
+  height: 461px !important;
+  left: 80px;
+  top: 470px !important;
+      }
+
+.scene2{
+position: absolute;
+width: 800px !important;
+height: 471px !important;
+left: 80px !important;
+top: 1300px !important;
+      }
+      .scene3{
+position: absolute;
+width: 800px !important;
+height: 449px !important;
+left: 80px;
+top: 2070px !important;
+      }
+      h1{position: absolute;
+width: 496px;
+height: 69px;
+left: 78px !important;
+top: 220px !important;
+
+font-family: Lovelace;
+font-style: normal;
+font-weight: normal;
+font-size: 50px;
+line-height: 55px;
+text-align: center;
+
+color: #FF003D;
+}
+    p5{position: absolute;
+width: 650px !important;
+height: 206px;
+left: 80px !important;
+top: 335px !important;
+
+font-family: FuturaLightC;
+font-style: normal;
+font-weight: normal;
+font-size: 30px !important;
+line-height: 32px !important;
+
+color: #FFFFFF;}
+
+      h2{position: absolute;
+width: 650px !important;
+height: 138px;
+left: 80px !important;
+top: 960px !important;
+
+font-family: Lovelace;
+font-style: normal;
+font-weight: normal;
+font-size: 50px;
+line-height: 55px;
+
+color: #FF003D;
+}
+          p6{position: absolute;
+            width: 650px !important;
+height: 106px;
+left: 80px !important;
+top: 1125px !important;
+
+font-family: FuturaLightC;
+font-style: normal;
+font-weight: normal;
+font-size: 30px !important;
+line-height: 32px !important;
+
+color: #FFFFFF;
+}
+
+      h3{
+        position: absolute;
+width: 499px;
+height: 69px;
+left: 80px !important;
+top: 1800px !important;
+
+font-family: Lovelace;
+font-style: normal;
+font-weight: normal;
+font-size: 50px;
+line-height: 55px;
+text-align: center;
+
+color: #FF003D;
+
+}
+
+      p7{
+        position: absolute;
+        width: 650px !important;
+height: 82px;
+left: 80px !important;
+top: 1930px !important;
+font-family: FuturaLightC;
+font-style: normal;
+font-weight: normal;
+font-size: 30px !important;
+line-height: 32px !important;
+
+color: #FFFFFF;
+
+}
+}
+@media only screen and (min-width: 321px){
+ .menu__item, .menu__box, .menu__btn, .checkbox .menu__toggle, .hamburger-menu{ visibility: hidden;}
+}
       .logo{
         position: fixed;
         left: 80px;
@@ -351,6 +653,18 @@
 <p10>+7999-841-53-81</p10>
 <p11>Адрес</p11>
 <p12>ул. Маковского, 2, Одинцово, Московская обл., Россия</p12>
+<div class="hamburger-menu">
+  <input id="menu__toggle" type="checkbox" />
+  <label class="menu__btn" for="menu__toggle">
+    <span></span>
+  </label>
+  <ul class="menu__box">
+    <li><a class="menu__item" href="./main.html">Главная</a></li>
+    <li><a class="menu__item" href="./about.html">О нас</a></li>
+    <li><a class="menu__item" href="./calendar.html">Билеты</a></li>
+    <li><a class="menu__item" href="./places.html">Места</a></li>
+    <li><a class="menu__item" href="./store.html">Магазин</a></li>
+  </ul>
 
 
   </body>
